--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,41 +1,109 @@
 @font-face {
-  font-family: 'icomoon';
-  src:
-    url('../fonts/icomoon.ttf?qx6wmd') format('truetype'),
-    url('../fonts/icomoon.woff?qx6wmd') format('woff'),
-    url('../fonts/icomoon.svg?qx6wmd#icomoon') format('svg');
-  font-weight: normal;
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-500.eot');
+  src: local('MuseoSansCyrl-500'),
+    url('MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-500.woff') format('woff'),
+    url('MuseoSansCyrl-500.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
-  font-display: block;
 }
 
-i {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-300Italic.eot');
+  src: local('MuseoSansCyrl-300Italic'),
+    url('MuseoSansCyrl-300Italic.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-300Italic.woff') format('woff'),
+    url('MuseoSansCyrl-300Italic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-500Italic.eot');
+  src: local('MuseoSansCyrl-500Italic'),
+    url('MuseoSansCyrl-500Italic.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-500Italic.woff') format('woff'),
+    url('MuseoSansCyrl-500Italic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-900.eot');
+  src: local('MuseoSansCyrl-900'),
+    url('MuseoSansCyrl-900.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-900.woff') format('woff'),
+    url('MuseoSansCyrl-900.ttf') format('truetype');
+  font-weight: 900;
   font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
-  content: "\ea90";
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-700.eot');
+  src: local('MuseoSansCyrl-700'),
+    url('MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-700.woff') format('woff'),
+    url('MuseoSansCyrl-700.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 
-.icon-instagram:before {
-  content: "\ea92";
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-700Italic.eot');
+  src: local('MuseoSansCyrl-700Italic'),
+    url('MuseoSansCyrl-700Italic.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-700Italic.woff') format('woff'),
+    url('MuseoSansCyrl-700Italic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
 }
 
-.icon-twitter:before {
-  content: "\ea96";
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-300.eot');
+  src: local('MuseoSansCyrl-300'),
+    url('MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-300.woff') format('woff'),
+    url('MuseoSansCyrl-300.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
 }
 
-.icon-linkedin:before {
-  content: "\eac9";
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-100.eot');
+  src: local('MuseoSansCyrl-100'),
+    url('MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-100.woff') format('woff'),
+    url('MuseoSansCyrl-100.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-100Italic.eot');
+  src: local('MuseoSansCyrl-100Italic'),
+    url('MuseoSansCyrl-100Italic.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-100Italic.woff') format('woff'),
+    url('MuseoSansCyrl-100Italic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('MuseoSansCyrl-900Italic.eot');
+  src: local('Museo Sans 900 Italic'), local('MuseoSansCyrl-900Italic'),
+    url('MuseoSansCyrl-900Italic.eot?#iefix') format('embedded-opentype'),
+    url('MuseoSansCyrl-900Italic.woff') format('woff'),
+    url('MuseoSansCyrl-900Italic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
 }
