--- a/src/sass/blocks/buttons.scss
+++ b/src/sass/blocks/buttons.scss
@@ -9,4 +9,10 @@
     font-size: .86rem;
     font-weight: 500;
 
+    &_main {
+        width: 300px;
+        height: 50px;
+        font-size: 1.14rem;
+    }
+
 }
