--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -1,9 +1,19 @@
 * {
     font-family: 'Museo Sans', sans-serif;
     font-size: 14px;
+    color: $black;
 }
 
 .container {
     max-width: 950px;
     margin: 0 auto;
+}
+
+.title {
+    margin: 0 auto 70px;
+    text-align: center;
+    color: $black;
+    text-transform: uppercase;
+    font-size: 2.2rem;
+    font-weight: 700;
 }
