--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,8 @@
-@import "base/global";
 @import "base/variables";
+
+
+@import "base/global";
+
 @import "blocks/buttons";
 @import "blocks/promo";
+@import "blocks/advantage";
