Create consult block. Created block with forms. Added button modificator _submit

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -16,4 +16,10 @@
     text-transform: uppercase;
     font-size: 2.2rem;
     font-weight: 700;
+
+    &_left {
+        text-align: left;
+        color: #ffffff;
+        font-size: 2.6rem;
+    }
 }
