--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,11 @@
         font-size: 1.14rem;
     }
 
+    &_submit {
+        width: 100%;
+        height: 50px;
+        font-size: 1.15rem;
+        font-weight: 500;
+    }
+
 }
