--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -22,4 +22,10 @@
         font-weight: 500;
     }
 
+    &_small {
+        width: 130px;
+        height: 40px;
+        font-size: 1rem;
+    }
+
 }
