--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -43,7 +43,7 @@
         display: none;
         flex-wrap: wrap;
         margin-top: 60px;
-        justify-content: space-between;
+        justify-content: space-around;
 
         &_active {
             display: flex;
