--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -39,10 +39,18 @@
             border: 2px solid $white;
             border-radius: 100%;
             margin: 0 15px;
+            transition: .55s ease;
+
+            &:hover {
+                box-shadow: inset 0 0 7px $white, 0 0 15px $white;
+            }
+
+
         }
 
         img {
             max-width: 100%;
+
         }
     }
 }
