--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -6,6 +6,8 @@
         img {
             display: block;
             margin: auto auto;
+            max-width: 100%;
+            height: auto;
         }
     }
 
