--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,5 @@
 @import "blocks/slider";
 @import "blocks/catalog";
 @import "blocks/feedback";
-@import "blocks/footer"
+@import "blocks/footer";
+@import "blocks/media";
