Added smooth scroll function.

--- a/src/sass/blocks/_consult.scss
+++ b/src/sass/blocks/_consult.scss
@@ -1,7 +1,7 @@
 .consult {
     min-height: 680px;
     padding-top: 100px;
-    background: url(../../img/consult-bg.jpg) center (center/cover) no-repeat;
+    background: url(../img/consult-bg.jpg) center (center/cover) no-repeat;
 
     &__inner {
         width: 800px;
