--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding-top: 21px;
-    background: url(../../img/main-bg.jpg) center (center/cover) no-repeat;
+    background: url(../img/main-bg.jpg) center (center/cover) no-repeat;
 
     &__container {
         padding-top: 90px;
